# medAI-hands-on

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
chapter/: krantz.cls  main.tex  references.bib
chapter/figures/: README.md  generate_figures.py
data/: README.md
models/pretrained/: README.md
notebooks/: 01_medical_imaging.ipynb  02_multimodal_integration.ipynb  03_llm_assisted_computing.ipynb
scripts/: create_brats_subset.py
src/: __init__.py  data_utils.py  models.py  visualization.py
